# RIN

./: .gitignore  main.py  pyproject.toml
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml
configs/data/: celeba.yaml
configs/logger/: wandb.yaml
configs/model/: image_diffusion.yaml
configs/model/net/: RIN.yaml
configs/trainer/: gpu.yaml
notebooks/: test_celeb_datamodule.ipynb  test_rin_pytorch.ipynb
src/data/: celeba_datamodule.py
src/models/: image_diffusion.py
src/models/components/: RIN.py  bregman_divergence.py
tests/: test_datamodules.py
