[project]
name = "rin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown>=5.2.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "rin-pytorch>=0.7.10",
    "wandb>=0.19.11",
]
